--- a/scaling.ipynb
+++ b/scaling.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "719e2b58-574f-4cac-aeb7-1251aed21124",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## <div class=\"alert alert-block alert-info\"> Imports<div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7453c802-7716-43bb-92ed-a3f3d306328e",
@@ -38,14 +49,17 @@
   {
    "cell_type": "markdown",
    "id": "1618c3e4-2c92-4af0-bd86-5ca5b80ae93c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "> # Wrangle"
+    "## <div class=\"alert alert-block alert-info\"> Wrangle <div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "a1fa310c-7250-4257-b6fb-3d36ffacc847",
    "metadata": {},
    "outputs": [
@@ -169,7 +183,7 @@
        "4     2005.0    6941.39  6037.0                  261.0  11324547  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,9 +476,12 @@
   {
    "cell_type": "markdown",
    "id": "a926e518-4b52-4bdf-9377-55cb24a75067",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "> # Splitting"
+    "## <div class=\"alert alert-block alert-info\"> Splitting <div>"
    ]
   },
   {
@@ -510,9 +527,12 @@
   {
    "cell_type": "markdown",
    "id": "93096cf3-06ca-45d1-989b-65bdba149d56",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "> # Scaling"
+    "## <div class=\"alert alert-block alert-info\"> Scaling <div>"
    ]
   },
   {
@@ -911,6 +931,17 @@
    "source": [
     "Based on the work you've done, choose a scaling method for your dataset. Write a function within your prepare.py that accepts as input the train, validate, and test data splits, and returns the scaled versions of each. Be sure to only learn the parameters for scaling from your training data!\n",
     "* I only have a wrangle, so the function will be contained in that file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e784ea7d-33fb-49a6-bd3b-bae792e64dbb",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## <div class=\"alert alert-block alert-info\"> Scaling Function<div>"
    ]
   },
   {
