--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -5,14 +5,17 @@
    "id": "f0cf0891-21b6-416e-bb63-2f95f52dbfa0",
    "metadata": {},
    "source": [
-    "# Zillow\n",
+    "# Initial Exploration and Data Manipulation for Zillow\n",
     "* Single Family Residential (2017)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "e8ed5217-e34e-4bc6-beea-31f095a16130",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## <div class=\"alert alert-block alert-info\"> Imports<div>"
    ]
@@ -56,6 +59,7 @@
    "cell_type": "markdown",
    "id": "c54464a7-fa83-4675-a9a8-cd5e499a8e90",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -2600,7 +2604,10 @@
   {
    "cell_type": "markdown",
    "id": "ed3a769b-c19a-4efc-b75e-0411bbcaed68",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## <div class=\"alert alert-block alert-info\"> Explore<div>\n",
     "\n",
@@ -3102,6 +3109,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d5d4edf-5d8c-4cc4-899c-40894536d191",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## <div class=\"alert alert-block alert-info\"> Splitting<div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "id": "9dd9aca8-f6f4-42e7-b930-dd0193ca9f0e",
@@ -3156,6 +3174,17 @@
     "X_train.drop(columns=['county', 'use','parcelid'], inplace=True)\n",
     "X_validate.drop(columns=['county', 'use','parcelid'], inplace=True)\n",
     "X_test.drop(columns=['county', 'use','parcelid'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "157862c3-11dc-44e2-b90b-9dcec6912226",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## <div class=\"alert alert-block alert-info\"> Scaling<div>"
    ]
   },
   {
